update gh image

--- a/_projects/2023-11-coding.md
+++ b/_projects/2023-11-coding.md
@@ -6,5 +6,6 @@ description: Board is a stylish full-width masonry grid theme. Made for designer
 featured_image: '/images/Projects/gh/gh.png'
 ---
 
-![hi]({{site.baseurl}}/images/Projects/gh/gh.png/)
+![]({{site.baseurl}}/images/Projects/gh/gh.png)
+
 
