--- a/_projects/2023-11-coding1.md
+++ b/_projects/2023-11-coding1.md
@@ -14,3 +14,15 @@ featured_image: '/images/Projects/coding1/v_bunny.gif'
     <img src="{{site.baseurl}}/images/Projects/coding1/contour2p.gif">
     <img src="{{site.baseurl}}/images/Projects/coding1/v_count_tol1.gif">
 </div>
+
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/eating.gif" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p><strong>Instructor:</strong> Panagiotis Michalatos, Nick Cassab</p>
+            <p><strong>Tools:</strong> YOLO | CLIP | PYGLET | IMGUI</p>
+            <p><strong>Time:</strong> 24Spring</p>
+            <br><br>
+            <p>The observation of human behavior in urban public space is vital for analyzing the social dynamics of cities and retrofitting urban infrastructure. However, traditional techniques of acquiring quantitative data on outdoor area usage have some limitations. Standard computer categorization methods can only detect pedestrian’s location and relative movement based on time series analysis, whereas manual counting and labeling approaches are both time-consuming and expensive. For user convenience and cost-effective urban spatial study, we developed CustomFootprint, a user-customized toolset for spatial evaluation, which draws behavior maps by combining human detection and further activity analysis via an objection detection model with a large language model.</p>
+        </div>
+    </div>
+</div>
