--- a/_projects/2021-11-1 SDME.md
+++ b/_projects/2021-11-1 SDME.md
@@ -6,33 +6,60 @@ description: Board is a stylish full-width masonry grid theme. Made for designer
 featured_image: '/images/Projects/SDME/cover.gif'
 ---
 
-<!-- ![hi]({{site.baseurl}}/images/Projects/gh/gh.png/) -->
-
-<!-- <div class="gallery" data-columns="2">
-  <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/eating.gif" alt="Eating">
-  <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/walking.gif" alt="Walking">
-  <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/standing_eating.gif" alt="Standing Eating">
-  <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/YOLO_CLIP.gif" alt="YOLO CLIP">
-</div> -->
-
-<div class="kgallery">
-    <div class="kgallery__item">
-        <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/eating.gif" alt="Eating behavior">
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P12.jpg" alt="Eating behavior">
         <div class="kgallery__caption">
-            <p>Are you someone who loves finding and discovering new words? Are you a board game enthusiast? If you are, then this Word Finder is a tool you can</p>
+            <p><strong>Tools:</strong> Rhino | Ladybug | Ansys Fluent</p>
+            <p><strong>Time:</strong> 2019-2021</p>
+            <br><br>
+            <p>Since ancient times, mankind has always been searching for ways to liveunder extreme conditions. With the advancement of technology, thereare increasing possible directions for human living environment. In theInternational Solar Decathlon, we tried to make carbon neutrality a realityin a dry thermal surrounding. We combined the modified traditional local wind tower and atrium withour house, endowing it with the ability to adjust the ventilation patternsaccording to the changeful external weather. We selected the best modelby simulation of different dimensions and utilized the Home Assistancesystem for smart management.</p>
         </div>
     </div>
 
-    <div class="kgallery__item">
-        <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/walking.gif" alt="Walking behavior">
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P34.jpg" alt="Eating behavior">
         <div class="kgallery__caption">
-            <p>Walking behavior</p>
+            <p style="color: rgb(0, 153, 153);"><strong>Design the interlayer</strong></p>
+            <p>After determining the basic dimensions of the house, the interlayer height needs to befurther derived, and the ventilation and wind blocking should be met, thus requiringseveral simulations to get the optimum height.</p>
+            <br><br>
+            <p style="color: rgb(0, 153, 153);"><strong>Get weather data</strong></p>
+            <p>Obtaining Climate Information to Analyze Natural Ventilation Patterns in the General Case</p><br><br><br><br><br><br><br><br>
         </div>
     </div>
-</div>
 
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P56.jpg" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Simulation for interlayer height</strong></p>
+            <p>Input the previously acquired environmental data and simulate it under
+different interlayer heights to obtain the most suitable result.
+</p><br><br><br><br><br><br><br><br>
+        </div>
+    </div>
 
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P78.jpg" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Home aassistant</strong></p>
+            <p>Achievement of optimum energy efficiency through automated control.</p>
+            <p>In the HOME ASSISTANT, we have completed the integration of
+most of intelligent devices, automation and the scene mode.
+</p><br><br><br><br><br><br><br><br>
+        </div>
+    </div>
 
-<iframe src="{{site.baseurl}}//images/Projects/CustomeFootprint/Kefan_508.pdf" width="100%" height="600px"></iframe>
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P910.jpg" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Construction</strong></p>
+            <p>Modular design makes the box easy to transport and easy to build.</p>
+        </div>
+    </div>
 
-<!-- [download]({{site.baseurl}}/images/Projects/CustomeFootprint/Kefan_0322.pdf/) -->
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/SDME/4P1112.jpg" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Construction process and photos</strong></p><br><br>
+
+        </div>
+    </div>
