--- a/_projects/2023-11-coding1.md
+++ b/_projects/2023-11-coding1.md
@@ -1,28 +1,76 @@
 ---
 title: 'Coding for Design I'
-subtitle: 'C# Grasshopper'
+subtitle: 'Dijkstra Algorithm'
 date: 2023-12-01 00:00:00
 description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
-featured_image: '/images/Projects/coding1/v_bunny.gif'
+featured_image: '/images/Projects/coding1/v_bunny-colored.gif'
 ---
 
-<div class="gallery" data-columns="3">
+<!-- <div class="gallery" data-columns="3">
 	<img src="{{site.baseurl}}/images/Projects/coding1/v_bunny.gif">
 	<img src="{{site.baseurl}}/images/Projects/coding1/c_bunny.gif">
     <img src="{{site.baseurl}}/images/Projects/coding1/contour_density.gif">
     <img src="{{site.baseurl}}/images/Projects/coding1/contour1p.gif">
     <img src="{{site.baseurl}}/images/Projects/coding1/contour2p.gif">
     <img src="{{site.baseurl}}/images/Projects/coding1/v_count_tol1.gif">
-</div>
+</div> -->
 
 <div class="kgallery__item">
-        <img src="{{site.baseurl}}/images/Projects/CustomeFootprint/eating.gif" alt="Eating behavior">
+        <img src="{{site.baseurl}}/images/Projects/coding1/com_path.gif" alt="Eating behavior">
         <div class="kgallery__caption">
-            <p><strong>Instructor:</strong> Panagiotis Michalatos, Nick Cassab</p>
-            <p><strong>Tools:</strong> YOLO | CLIP | PYGLET | IMGUI</p>
-            <p><strong>Time:</strong> 24Spring</p>
+            <p><strong>Instructor:</strong> Panagiotis Michalatos</p>
+            <p><strong>Tools:</strong> C# | Grasshopper</p>
+            <p><strong>Time:</strong> 23Fall</p>
             <br><br>
-            <p>The observation of human behavior in urban public space is vital for analyzing the social dynamics of cities and retrofitting urban infrastructure. However, traditional techniques of acquiring quantitative data on outdoor area usage have some limitations. Standard computer categorization methods can only detect pedestrian’s location and relative movement based on time series analysis, whereas manual counting and labeling approaches are both time-consuming and expensive. For user convenience and cost-effective urban spatial study, we developed CustomFootprint, a user-customized toolset for spatial evaluation, which draws behavior maps by combining human detection and further activity analysis via an objection detection model with a large language model.</p>
+            <p>Try applying
+            <a href="https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#:~:text=Dijkstra's%20algorithm%20(%2F%CB%88da%C9%AA,and%20published%20three%20years%20later." style="text-decoration: underline; text-decoration-color: rgb(0, 165, 171, 1);"><span style="font-size: inherit; font-weight: inherit;">Dijkstra's Algorithm</span></a> on remeshing / generation effect on mesh</p>
+            <p>. </p>
+            <p>Experiment with what outcome it could create</p>
         </div>
     </div>
-</div>
+
+   
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/coding1/com_contour.gif" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Contour over eometry</strong></p>
+            <p>A contour is a line formed by equidistant points, but it is difficult to partition a contour uniformly over irregular geometry. By labeling the shortest distance, we can get the contour of a mesh based on a point.</p>
+            <br><br>
+            <p><strong>Accurate control</strong></p>
+            <p>It is also possible to control the contour position more accurately by using the proportional control on the edge.</p>
+        </div>
+    </div>
+
+
+
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/coding1/com_contour_bunny.gif" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Contour over irregular eometry</strong></p>
+            <p>Applied to complex geometries, it allows for a clear analysis of modeling logic and form features.</p>
+        </div>
+    </div>
+
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/coding1/com_v.gif" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>Connecting contour and endpoints</strong></p>
+            <p>The generated contour points are then connected to the endpoints with minimal paths to achieve the effect of reconstructing the generation on the existing mesh.</p>
+        </div>
+    </div>
+
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/coding1/v_test.png" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>test on geometry</strong></p>
+            <p>The position of the generated structure can be controlled by endpoints</p>
+        </div>
+    </div>
+
+<div class="kgallery__item">
+        <img src="{{site.baseurl}}/images/Projects/coding1/com_v_rabbit.gif" alt="Eating behavior">
+        <div class="kgallery__caption">
+            <p style="color: rgb(0, 153, 153);"><strong>test on Rabbit</strong></p>
+            <p></p>
+        </div>
+    </div>
