--- a/_projects/2021-11-1 SDME.md
+++ b/_projects/2021-11-1 SDME.md
@@ -6,6 +6,19 @@ description: Board is a stylish full-width masonry grid theme. Made for designer
 featured_image: '/images/Projects/SDME/cover.gif'
 ---
 
+
+<div class="kgallery-video">
+    <div class="kgallery-video__item">
+        <iframe src="https://player.vimeo.com/video/1016404131?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="kgallery-video__caption">
+        <p><strong>Tools:</strong> Rhino | Ladybug | Ansys Fluent</p>
+        <p><strong>Time:</strong> 2019-2021</p>
+        <p><strong>Award:</strong> Champion</p>
+        <p>Team Wrap-Up Video</p>
+    </div>
+</div>
+
 <div class="kgallery__item">
         <img src="{{site.baseurl}}/images/Projects/SDME/4P12.jpg" alt="Eating behavior">
         <div class="kgallery__caption">
