--- a/_projects/2024-3-1 unity.md
+++ b/_projects/2024-3-1 unity.md
@@ -10,7 +10,7 @@ featured_image: '/images/Projects/unity/principle.gif'
         <img src="{{site.baseurl}}/images/Projects/unity/principle.gif" alt="Eating behavior">
         <div class="kgallery__caption">
             <p><strong>Instructor:</strong> Panagiotis Michalatos</p>
-            <p><strong>Group with:</strong> Xinlin Lu, Dezhong Deng</p>
+            <p><strong>Group work/3</p>
             <p><strong>Tools:</strong> C# | Unity</p>
             <p><strong>Time:</strong> 2023Spring</p>
             <br><br>
