--- a/_projects/2023-12 ml_arch.md
+++ b/_projects/2023-12 ml_arch.md
@@ -12,7 +12,7 @@ featured_image: '/images/Projects/ml_arch/cover.gif'
             <p><strong>Instructor:</strong> Panagiotis Michalatos, Nicholas Cassab</p>
             <p><strong>Group work/4</strong></p>
             <p><strong>Tools:</strong> Python, Grasshopper</p>
-            <p><strong>Time:</strong> 2023Spring</p>
+            <p><strong>Time:</strong> 23Fall</p>
             <br><br>
             <p>Select two categories with distinct and different features, then input them as dataset into machine learning classifier, and then use ML's judgment for design selection, including siting, windowing, and structuring.</p>
         </div>
