--- a/_projects/2022-6 DRG.md
+++ b/_projects/2022-6 DRG.md
@@ -3,10 +3,19 @@ title: 'Designing Resilience Global'
 subtitle: 'Group work'
 date: 2022-6-2
 description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
-featured_image: '/images/Projects/DRG/Picture4.png'
+featured_image: '/images/Projects/DRG/club(1).png'
 ---
 
 <div class="gallery" data-columns="2">
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(5).png" alt="Eating">
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(6).png" alt="Eating">
+
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(2).png" alt="Eating">
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(3).png" alt="Eating">
+
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(1).png" alt="Eating">
+  <img src="{{site.baseurl}}/images/Projects/DRG/club(4).png" alt="Eating">
+
   <img src="{{site.baseurl}}/images/Projects/DRG/Picture1.png" alt="Eating">
   <img src="{{site.baseurl}}/images/Projects/DRG/Picture2.png" alt="Eating">
 
