--- a/_posts/2024-06-30-Italy.md
+++ b/_posts/2024-06-30-Italy.md
@@ -1,8 +1,8 @@
 ---
-title: 'Italy'
+title: "Italy"
 date: 2024-06-30 00:00:00
 description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
-featured_image: '/images/MyDay/italy/island.JPG'
+featured_image: "/images/MyDay/italy/island.JPG"
 ---
 
 <div class="gallery" data-columns="3">
